--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="description_begin_activity">To improve their vocabulary, learners can actively practice through English vocabulary learning apps. Anna is an option not to be missed. Let\'s get started!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="register_success">User has been registed</string>
 </resources>
