--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="register_success">User has been registed</string>
+    <string name="take_a_picture">Take a picture</string>
+    <string name="translation">Translation</string>
+    <string name="back">back</string>
 </resources>
