--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="take_a_picture">Take a picture</string>
     <string name="translation">Translation</string>
     <string name="back">back</string>
+    <string name="DEPARTMENT">DEPARTMENT</string>
 </resources>
